; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavcodec/extr_vc1.c_decode_colskip.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavcodec/extr_vc1.c_decode_colskip.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i64*, i32, i32, i32, i32*)* @decode_colskip to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @decode_colskip(i64* %0, i32 %1, i32 %2, i32 %3, i32* %4) #0 {
  %6 = alloca i64*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32*, align 8
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  store i64* %0, i64** %6, align 8
  store i32 %1, i32* %7, align 4
  store i32 %2, i32* %8, align 4
  store i32 %3, i32* %9, align 4
  store i32* %4, i32** %10, align 8
  store i32 0, i32* %11, align 4
  br label %13

13:                                               ; preds = %58, %5
  %14 = load i32, i32* %11, align 4
  %15 = load i32, i32* %7, align 4
  %16 = icmp slt i32 %14, %15
  br i1 %16, label %17, label %61

17:                                               ; preds = %13
  %18 = load i32*, i32** %10, align 8
  %19 = call i64 @get_bits1(i32* %18)
  %20 = icmp ne i64 %19, 0
  br i1 %20, label %37, label %21

21:                                               ; preds = %17
  store i32 0, i32* %12, align 4
  br label %22

22:                                               ; preds = %33, %21
  %23 = load i32, i32* %12, align 4
  %24 = load i32, i32* %8, align 4
  %25 = icmp slt i32 %23, %24
  br i1 %25, label %26, label %36

26:                                               ; preds = %22
  %27 = load i64*, i64** %6, align 8
  %28 = load i32, i32* %12, align 4
  %29 = load i32, i32* %9, align 4
  %30 = mul nsw i32 %28, %29
  %31 = sext i32 %30 to i64
  %32 = getelementptr inbounds i64, i64* %27, i64 %31
  store i64 0, i64* %32, align 8
  br label %33

33:                                               ; preds = %26
  %34 = load i32, i32* %12, align 4
  %35 = add nsw i32 %34, 1
  store i32 %35, i32* %12, align 4
  br label %22

36:                                               ; preds = %22
  br label %55

37:                                               ; preds = %17
  store i32 0, i32* %12, align 4
  br label %38

38:                                               ; preds = %51, %37
  %39 = load i32, i32* %12, align 4
  %40 = load i32, i32* %8, align 4
  %41 = icmp slt i32 %39, %40
  br i1 %41, label %42, label %54

42:                                               ; preds = %38
  %43 = load i32*, i32** %10, align 8
  %44 = call i64 @get_bits1(i32* %43)
  %45 = load i64*, i64** %6, align 8
  %46 = load i32, i32* %12, align 4
  %47 = load i32, i32* %9, align 4
  %48 = mul nsw i32 %46, %47
  %49 = sext i32 %48 to i64
  %50 = getelementptr inbounds i64, i64* %45, i64 %49
  store i64 %44, i64* %50, align 8
  br label %51

51:                                               ; preds = %42
  %52 = load i32, i32* %12, align 4
  %53 = add nsw i32 %52, 1
  store i32 %53, i32* %12, align 4
  br label %38

54:                                               ; preds = %38
  br label %55

55:                                               ; preds = %54, %36
  %56 = load i64*, i64** %6, align 8
  %57 = getelementptr inbounds i64, i64* %56, i32 1
  store i64* %57, i64** %6, align 8
  br label %58

58:                                               ; preds = %55
  %59 = load i32, i32* %11, align 4
  %60 = add nsw i32 %59, 1
  store i32 %60, i32* %11, align 4
  br label %13

61:                                               ; preds = %13
  ret void
}

declare dso_local i64 @get_bits1(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
